service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  labels:
    app: service-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-a
  template:
    metadata: 
      labels:
        app: service-a
    spec:
      serviceAccountName: service-a-sa
      containers:
      - name: service-a
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
