service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: hashicorp/http-echo
        args: 
          - "-text=$(GREETING_TEXT)"
          - "-listen=:8080"
        ports:
          - containerPort: 8080
            name: http
