service-store-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-store
  labels:
    app: service-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-store
  template:
    metadata: 
      labels:
        app: service-store
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: storage-pvc
      containers:
      - name: service-store
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
