service-hpa-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-hpa-test
  labels:
    app: service-hpa-test
spec:
  selector:
    matchLabels:
      app: service-hpa-test
  template:
    metadata:
      labels:
        app: service-hpa-test
    spec:
      containers:
      - name: service-hpa-test
        image: registry.k8s.io/hpa-example
        ports:
          - containerPort: 80
            name: http
        resources:
          requests:
            cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: service-hpa-test
spec:
  selector:
    app: service-hpa-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: http

# Test with:
#
#  kubectl run -it --rm load \
#   --image=busybox:1.36 \
#   --restart=Never \
#   --command -- /bin/sh
#
# while sleep 0.01; do wget -q -O- http://service-hpa-test; done
